// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should display the Header component  1`] = `
.emotion-8 {
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
  left: 50%;
  position: absolute;
}

.emotion-2 {
  margin: 0 0 30px 0;
  border-radius: 25px;
  box-shadow: 0 10px 20px 0 rgba(69,58,100,0.2);
  background: #f7f8f6;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 90px;
  height: 90px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-4 {
  color: #4b5e40;
}

<div
  class="MuiBox-root MuiBox-root-217"
>
  <div
    class="emotion-8 emotion-9"
    data-testid="loading"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-0 emotion-1"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="MuiCircularProgress-root emotion-4 emotion-5 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 50px; height: 50px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> should display the Loading component at the beginning  1`] = `
.emotion-8 {
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
  left: 50%;
  position: absolute;
}

.emotion-2 {
  margin: 0 0 30px 0;
  border-radius: 25px;
  box-shadow: 0 10px 20px 0 rgba(69,58,100,0.2);
  background: #f7f8f6;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 90px;
  height: 90px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-4 {
  color: #4b5e40;
}

<div
  class="MuiBox-root MuiBox-root-2"
>
  <div
    class="emotion-8 emotion-9"
    data-testid="loading"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-0 emotion-1"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="MuiCircularProgress-root emotion-4 emotion-5 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 50px; height: 50px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
